; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ui/extr_ui_lib.c_UI_dup_info_string.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ui/extr_ui_lib.c_UI_dup_info_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UI_F_UI_DUP_INFO_STRING = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4
@UIT_INFO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @UI_dup_info_string(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* null, i8** %6, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %19

9:                                                ; preds = %2
  %10 = load i8*, i8** %5, align 8
  %11 = call i8* @OPENSSL_strdup(i8* %10)
  store i8* %11, i8** %6, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %9
  %15 = load i32, i32* @UI_F_UI_DUP_INFO_STRING, align 4
  %16 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %17 = call i32 @UIerr(i32 %15, i32 %16)
  store i32 -1, i32* %3, align 4
  br label %24

18:                                               ; preds = %9
  br label %19

19:                                               ; preds = %18, %2
  %20 = load i32*, i32** %4, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = load i32, i32* @UIT_INFO, align 4
  %23 = call i32 @general_allocate_string(i32* %20, i8* %21, i32 1, i32 %22, i32 0, i32* null, i32 0, i32 0, i32* null)
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %19, %14
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i8* @OPENSSL_strdup(i8*) #1

declare dso_local i32 @UIerr(i32, i32) #1

declare dso_local i32 @general_allocate_string(i32*, i8*, i32, i32, i32, i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
